# pinote

./: README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
pinote/: applescript.py  cli.py  notes.py
pinote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_applescript.py  test_cli.py  test_notes.py
